// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getPayloads 1`] = `
[
  "😎",
  "☂️",
  "bar",
]
`;

exports[`payload runtype validation 1`] = `
"[
  {
    "code": "custom",
    "path": [
      "foo",
      "rules",
      0,
      "payload"
    ],
    "message": "Should be bar"
  }
]"
`;

exports[`getPayloadForEachName 1`] = `
{
  "bar": "😁",
  "foo": "😎",
}
`;

exports[`getPayloadForEachName 2`] = `
{
  "bar": "async payloads!",
  "foo": undefined,
}
`;

exports[`fallThrough targeting 1`] = `
{
  "bar": {
    "rules": [
      {
        "fallThrough": [
          {
            "payload": "😟",
            "targeting": {
              "weather": [
                "rainy",
              ],
            },
          },
          {
            "payload": "😁",
            "targeting": {
              "weather": [
                "sunny",
              ],
            },
          },
          {
            "payload": "😐",
            "targeting": {},
          },
        ],
        "targeting": {},
      },
    ],
    "variables": {},
  },
  "foo": {
    "rules": [
      {
        "fallThrough": [
          {
            "payload": "🏄‍♂️",
            "targeting": {
              "weather": [
                "sunny",
              ],
            },
          },
        ],
        "targeting": {
          "surf": [
            "strong",
          ],
        },
      },
      {
        "fallThrough": [
          {
            "payload": "😎",
            "targeting": {
              "weather": [
                "sunny",
              ],
            },
          },
          {
            "payload": "☂️",
            "targeting": {
              "weather": [
                "rainy",
              ],
            },
          },
        ],
        "targeting": {},
      },
    ],
    "variables": {},
  },
  "mung": {
    "rules": [
      {
        "fallThrough": [
          {
            "payload": "☂️",
            "targeting": {
              "weather": [
                "rainy",
              ],
            },
          },
        ],
        "targeting": {
          "surf": [
            "!strong",
          ],
        },
      },
      {
        "fallThrough": [
          {
            "payload": "🏄‍♂️",
            "targeting": {
              "weather": [
                "sunny",
              ],
            },
          },
        ],
        "targeting": {
          "surf": [
            "strong",
          ],
        },
      },
    ],
    "variables": {},
  },
}
`;

exports[`fallThrough targeting 2`] = `
{
  "bar": {
    "__rules__": [
      {
        "payload": "😟",
        "targeting": {
          "weather": [
            "rainy",
          ],
        },
      },
      {
        "payload": "😁",
        "targeting": {
          "weather": [
            "sunny",
          ],
        },
      },
      {
        "payload": "😐",
        "targeting": {},
      },
    ],
  },
  "foo": {
    "__rules__": [
      {
        "payload": "🏄‍♂️",
        "targeting": {
          "weather": [
            "sunny",
          ],
        },
      },
    ],
  },
  "mung": {
    "__rules__": [
      {
        "payload": "☂️",
        "targeting": {
          "weather": [
            "rainy",
          ],
        },
      },
    ],
  },
}
`;

exports[`fallThrough targeting 3`] = `
{
  "bar": {
    "__rules__": [
      {
        "payload": "😟",
        "targeting": {
          "weather": [
            "rainy",
          ],
        },
      },
      {
        "payload": "😁",
        "targeting": {
          "weather": [
            "sunny",
          ],
        },
      },
      {
        "payload": "😐",
        "targeting": {},
      },
    ],
  },
  "foo": {
    "__rules__": [
      {
        "payload": "🏄‍♂️",
        "targeting": {
          "weather": [
            "sunny",
          ],
        },
      },
    ],
  },
  "mung": {
    "__rules__": [
      {
        "payload": "🏄‍♂️",
        "targeting": {
          "weather": [
            "sunny",
          ],
        },
      },
    ],
  },
}
`;

exports[`inserting data 1`] = `
{
  "bar": {
    "__rules__": [
      {
        "payload": "😟",
        "targeting": {
          "highTide": false,
        },
      },
      {
        "payload": "😁",
        "targeting": {
          "highTide": true,
        },
      },
    ],
  },
  "foo": "😎",
  "moo": "glue",
}
`;

exports[`inserting data with variables 1`] = `
{
  "bar": "😁",
  "foo": "😎",
  "moo": "glue",
}
`;

exports[`broken 1`] = `
{
  "foo": "face",
}
`;

exports[`broken 2`] = `
{
  "foo": {
    "__rules__": [
      {
        "payload": "yay",
        "targeting": {
          "browser": [
            "chrome",
          ],
        },
      },
      {
        "payload": "nay",
        "targeting": {
          "browser": [
            "edge",
          ],
        },
      },
    ],
  },
}
`;

exports[`variables 1`] = `
{
  "a": {
    "b": {
      "c": "foo",
      "d": 1,
    },
  },
}
`;

exports[`variables 2`] = `
{
  "a": {
    "b": {
      "c": "bar",
      "d": 1,
    },
  },
}
`;

exports[`variables using fallthrough targeting 1`] = `
{
  "__rules__": [
    {
      "payload": {
        "a": {
          "b": {
            "c": "{{c}}",
            "d": 1,
          },
        },
      },
    },
  ],
  "__variables__": {
    "c": [
      {
        "payload": "1",
        "targeting": {
          "browser": [
            "chrome",
          ],
        },
      },
      {
        "payload": "2",
        "targeting": {},
      },
    ],
  },
}
`;

exports[`variables in arrays 1`] = `
{
  "bar": {
    "rules": [
      {
        "payload": [
          {
            "b": [Function],
            "c": [Function],
          },
        ],
      },
    ],
    "variables": {
      "b": [
        {
          "payload": 2,
        },
      ],
      "c": [
        {
          "payload": "3",
        },
      ],
    },
  },
  "foo": {
    "rules": [
      {
        "payload": [
          [Function],
        ],
      },
    ],
    "variables": {
      "a": [
        {
          "payload": 1,
        },
      ],
    },
  },
}
`;

exports[`errors when using variables with incorrect types 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": 
"The variable {{c}} cannot be used where it currently is in the payload.
Invalid input: expected string, received number"
,
    "path": [
      "foo",
      "variables",
      "c",
      0,
      "payload",
    ],
  },
]
`;
